--- a/argocd/apps/media-server/unpackerr/manifests/deploy.yaml
+++ b/argocd/apps/media-server/unpackerr/manifests/deploy.yaml
@@ -68,7 +68,9 @@ spec:
         #     name: config
         # - name: logs
         #   emptyDir: {}
-        # - name: media
+        - name: media
+          persistentVolumeClaim:
+            claimName: media
         #   nfs:
         #     server: marcus-server.lan
         #     path: /data/media
