--- a/argocd/apps/media-server/unpackerr/manifests/pvc.yaml
+++ b/argocd/apps/media-server/unpackerr/manifests/pvc.yaml
@@ -21,3 +21,15 @@ spec:
   resources:
     requests:
       storage: 100Mi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: media
+spec:
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 1Gi
+  volumeName: media-pv
