--- a/argocd/apps/media-server/unpackerr/manifests/pvc.yaml
+++ b/argocd/apps/media-server/unpackerr/manifests/pvc.yaml
@@ -27,6 +27,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: media
 spec:
+  storageClassName: manual
   accessModes:
     - ReadWriteMany
   resources:
