--- a/argocd/apps/infra/renovate/values.yaml
+++ b/argocd/apps/infra/renovate/values.yaml
@@ -4,7 +4,7 @@ renovate:
   mendRnvEndPoint: https://api.github.com/
   mendRnvWebhookURL: https://renovate.yanello.net/webhook
   existingSecret: renovate-secrets
-  mendRnvCronJobSchedulerAll: "* */12 * * *"
+  mendRnvCronJobSchedulerAll: "0 0 * * *"
   extraEnvVars:
     - name: LOG_LEVEL
       value: info
