--- a/argocd/apps/backstage/manifests/rbac.yaml
+++ b/argocd/apps/backstage/manifests/rbac.yaml
@@ -51,3 +51,12 @@ roleRef:
   kind: ClusterRole
   name: backstage-read-only
   apiGroup: rbac.authorization.k8s.io
+---
+
+  apiVersion: v1
+  kind: Secret
+  metadata:
+    name: backstage-sa-token
+    annotations:
+      kubernetes.io/service-account.name: backstage
+  type: kubernetes.io/service-account-token
