--- a/argocd/apps/argo-test/kustomization.yaml
+++ b/argocd/apps/argo-test/kustomization.yaml
@@ -4,6 +4,6 @@ kind: Kustomization
   
 helmCharts:
   - name: nginx
-    releaseName: nginx
+    releaseName: nginx-argo
     repo: https://charts.bitnami.com/bitnami
-    version: "19.1.0"
+    version: '19.1.0'
