--- a/argocd/apps/argo-test/kustomization.yaml
+++ b/argocd/apps/argo-test/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
   
 helmCharts:
-  - name: nginx
-    repo: https://charts.bitnami.com/bitnami
-    version: "19.1.0"
-    releaseName: nginx
+  - name: hello-world
+    repo: https://helm.github.io/examples
+    version: "0.1.0"
+    releaseName: hello-world
