test gitea secret app name

--- a/argocd/apps/infra/gitea/image-pull-secrets/app-set.yaml
+++ b/argocd/apps/infra/gitea/image-pull-secrets/app-set.yaml
@@ -11,7 +11,7 @@ spec:
           - namespace: dollardollar-dev
   template:
     metadata:
-      name: "{{namespace}}-gitea-pull-secrets"
+      name: "{{namespace}}-app"
       labels:
         app.kubernetes.io/part-of: "{{namespace}}-app"
     spec:
