--- a/argocd/apps/backstage/kustomization.yaml
+++ b/argocd/apps/backstage/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - ./manifests/http-route.yaml
   - ./manifests/rbac.yaml
   - ./manifests/sts.yaml
+  - ./manifests/svc.yaml
   #- ./manifests/cm.yaml
   
 # helmCharts:
