--- a/ansible/k3s/main.yml
+++ b/ansible/k3s/main.yml
@@ -66,13 +66,16 @@
       delegate_to: "{{ item }}"
       delegate_facts: true
       with_items: "{{ groups['remaining_k3s_servers'] }}"
+      
+    - name: Debug Print k3s token
+      ansible.builtin.debug:
+        msg: "K3s Token: {{ k3s_token }}"
+    # - name: Pause to allow first server startup # ideally we would wait for the server to be ready with a healthcheck
+    #   when: (groups['k3s_servers'] | length) > 1
+    #   ansible.builtin.pause:
+    #     seconds: 10
 
-    - name: Pause to allow first server startup # ideally we would wait for the server to be ready with a healthcheck
-      when: (groups['k3s_servers'] | length) > 1
-      ansible.builtin.pause:
-        seconds: 10
-
-- name: Setup remaining k3s servers
+- name: Setup remaining k3s control plane servers
   hosts: remaining_k3s_servers
   become: true
   tasks:
@@ -88,8 +91,7 @@
         INSTALL_K3S_CHANNEL: "{{ k3s_channel }}"
         INSTALL_K3S_VERSION: "{{ k3s_version }}"
         K3S_TOKEN: "{{ k3s_token }}"
-        # There will only ever be one host in this group
-        K3S_URL: "https://{{ hostvars[groups['initial_k3s_server'][0]].ansible_default_ipv4.address }}:6443"
+        K3S_URL: "https://{{ k3s_control_plane_vip }}:6443"
         K3S_NODE_NAME: "{{ node_name }}"
         # This needs to include `server` first so it does not get registered as an agent. Set the --tls-san to the VIP
         INSTALL_K3S_EXEC: |
@@ -97,50 +99,50 @@
           --cluster-cidr=10.42.0.0/16
       when: (reinstall | bool) or not k3s.stat.exists
 
-- name: Wait for all nodes to complete their registraion
-  hosts: k3s_servers
-  vars:
-    total_amount_of_nodes: "{{ groups['k3s_servers'] | count + groups['k3s_agents'] | count }}"
-  tasks:
-    - name: Wait until all agents are registered
-      become: true
-      ansible.builtin.shell: |
-        k3s kubectl get nodes --no-headers | wc -l
-      until: agents.stdout | int == {{ total_amount_of_nodes }} | int
-      register: agents
-      retries: 10
-      delay: 10
+# - name: Wait for all agent nodes to complete their registraion
+#   hosts: k3s_servers
+#   vars:
+#     total_amount_of_nodes: "{{ groups['k3s_servers'] | count + groups['k3s_agents'] | count }}"
+#   tasks:
+#     - name: Wait until all agents are registered
+#       become: true
+#       ansible.builtin.shell: |
+#         k3s kubectl get nodes --no-headers | wc -l
+#       until: agents.stdout | int == {{ total_amount_of_nodes }} | int
+#       register: agents
+#       retries: 10
+#       delay: 10
 
-- name: Setup k3s agents
-  hosts: k3s_agents
-  tasks:
-    - name: Check if k3s is already installed
-      ansible.builtin.stat:
-        path: /usr/local/bin/k3s
-      register: k3s
+# - name: Setup k3s agents
+#   hosts: k3s_agents
+#   tasks:
+#     - name: Check if k3s is already installed
+#       ansible.builtin.stat:
+#         path: /usr/local/bin/k3s
+#       register: k3s
 
-    - name: Extract k3s server node token from control node
-      local_action:
-        module: shell
-        cmd: cat node_join_token
-      register: node_join_token
+#     - name: Extract k3s server node token from control node
+#       local_action:
+#         module: shell
+#         cmd: cat node_join_token
+#       register: node_join_token
 
-    - name: Download k3s install script
-      become: true
-      ansible.builtin.get_url:
-        url: "https://get.k3s.io"
-        dest: "{{ k3s_install_script_dest }}"
-        mode: "0755"
-      when: not k3s.stat.exists
-    - name: Install k3s on agent
-      become: true
-      ansible.builtin.command: /tmp/k3s_install.sh
-      environment:
-        K3S_TOKEN: "{{ node_join_token.stdout }}"
-        # Select the first host in the group of k3s servers as the server for the agent
-        K3S_URL: "https://{{ k3s_control_plane_vip }}:6443"
-        K3S_NODE_NAME: "{{ inventory_hostname }}"
-      when: not k3s.stat.exists
+#     - name: Download k3s install script
+#       become: true
+#       ansible.builtin.get_url:
+#         url: "https://get.k3s.io"
+#         dest: "{{ k3s_install_script_dest }}"
+#         mode: "0755"
+#       when: not k3s.stat.exists
+#     - name: Install k3s on agent
+#       become: true
+#       ansible.builtin.command: /tmp/k3s_install.sh
+#       environment:
+#         K3S_TOKEN: "{{ node_join_token.stdout }}"
+#         # Select the first host in the group of k3s servers as the server for the agent
+#         K3S_URL: "https://{{ k3s_control_plane_vip }}:6443"
+#         K3S_NODE_NAME: "{{ inventory_hostname }}"
+#       when: not k3s.stat.exists
     #TODO
   # - name: Copy kubectl config from server to temp .kube directory on control node
   #   become: true
