--- a/argocd/apps/dev/dollardollar/manifests/deploy.yaml
+++ b/argocd/apps/dev/dollardollar/manifests/deploy.yaml
@@ -20,8 +20,8 @@ spec:
       labels:
         app: dollardollar-dev
     spec:
-      # imagePullSecrets:
-      #   - name: dollardollar-pull-secrets
+      imagePullSecrets:
+        - name: dollardollar-pull-secrets
       containers:
         - envFrom:
             - secretRef:
