--- a/argocd/apps/backstage/manifests/rbac.yaml
+++ b/argocd/apps/backstage/manifests/rbac.yaml
@@ -59,3 +59,13 @@ metadata:
   annotations:
     kubernetes.io/service-account.name: backstage
 type: kubernetes.io/service-account-token
+---
+apiVersion: v1
+automountServiceAccountToken: true
+kind: ServiceAccount
+metadata:
+  labels:
+    app.kubernetes.io/component: backstage
+    app.kubernetes.io/instance: backstage-app
+  name: backstage
+
