--- a/argocd/apps/backstage/manifests/svc.yaml
+++ b/argocd/apps/backstage/manifests/svc.yaml
@@ -8,3 +8,30 @@ spec:
     app: postgres
   ports:
     - port: 5432
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app.kubernetes.io/component: backstage
+    app.kubernetes.io/instance: backstage-app
+    app.kubernetes.io/name: backstage
+  name: backstage
+spec:
+  clusterIP: 10.43.152.252
+  clusterIPs:
+    - 10.43.152.252
+  internalTrafficPolicy: Cluster
+  ipFamilies:
+    - IPv4
+  ipFamilyPolicy: SingleStack
+  ports:
+    - name: http-backend
+      port: 7007
+      protocol: TCP
+      targetPort: backend
+  selector:
+    app.kubernetes.io/component: backstage
+    app.kubernetes.io/instance: backstage
+    app.kubernetes.io/name: backstage
+  type: ClusterIP
