enable backstage migrate6

--- a/argocd/apps/backstage/manifests/deploy.yaml
+++ b/argocd/apps/backstage/manifests/deploy.yaml
@@ -33,6 +33,9 @@ spec:
           env:
             - name: APP_CONFIG_backend_listen_port
               value: '7007'
+          envFrom:
+            - secretRef:
+                name: backstage-secrets
           image: gitea.yanello.net/marcus/backstage:latest
           imagePullPolicy: Always
           livenessProbe:
