nfs for tautulli vol

--- a/argocd/apps/media-server/tautulli/deploy.yaml
+++ b/argocd/apps/media-server/tautulli/deploy.yaml
@@ -67,7 +67,7 @@ spec:
             failureThreshold: 3
       volumes:
         - name: config
-          hostPath:
+          nfs:
             path: /zpool/k8s/tautulli/config
         - name: plex-logs
           nfs:
