--- a/argocd/apps/media-server/tautulli/deploy.yaml
+++ b/argocd/apps/media-server/tautulli/deploy.yaml
@@ -73,10 +73,12 @@ spec:
             failureThreshold: 3
       volumes:
         - name: config
-          nfs:
-            server: marcus-server.lan
+          hostPath:
             path: /zpool/k8s/tautulli/config
+          # nfs:
+          #   server: marcus-server.lan
         - name: plex-logs
-          nfs:
-            server: marcus-server.lan
+          # nfs:
+          #   server: marcus-server.lan
+          hostPath:
             path: /zpool/k8s/plex/config/Library/Application Support/Plex Media Server/Logs
