--- a/argocd/apps/dev/bookinfo/kustomization.yaml
+++ b/argocd/apps/dev/bookinfo/kustomization.yaml
@@ -1,6 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+labels:
+  backstage.io/kubernetes-id: bookinfo-dev
+  
 resources:
   - ./platform/kube/bookinfo.yaml
   - ./platform/kube/bookinfo-ingress.yaml
