--- a/argocd/apps/dev/bookinfo/kustomization.yaml
+++ b/argocd/apps/dev/bookinfo/kustomization.yaml
@@ -2,7 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 labels:
-  backstage.io/kubernetes-id: bookinfo-dev
+  - includeSelectors: false
+    pairs:
+      backstage.io/kubernetes-id: bookinfo-dev
   
 resources:
   - ./platform/kube/bookinfo.yaml
