--- a/argocd/apps/minecraft/manifests/sts.yaml
+++ b/argocd/apps/minecraft/manifests/sts.yaml
@@ -36,7 +36,7 @@ spec:
           envFrom:
             - configMapRef:
                 name: mc-config
-          image: itzg/minecraft-server:java21
+          image: itzg/minecraft-server:2025.4.0-java21@sha256:ebd8e1308013c320168f436076dc5e854172be0131dd89c8406c5a4b6bc3da0a
           stdin: true
           tty: true
           volumeMounts:
