--- a/argocd/apps/infra/gitea/image-pull-secrets/app-set.yaml
+++ b/argocd/apps/infra/gitea/image-pull-secrets/app-set.yaml
@@ -9,6 +9,7 @@ spec:
         elements:
           - namespace: backstage
           - namespace: dollardollar-dev
+          - namespace: nepenthes
   template:
     metadata:
       name: "{{namespace}}-gitea-pull-secrets"
