--- a/argocd/apps/nepenthes/manifests/deploy.yaml
+++ b/argocd/apps/nepenthes/manifests/deploy.yaml
@@ -40,7 +40,7 @@ spec:
             - name: config
               mountPath: /etc/nepenthes-config.yml
               subPath: nepenthes-config.yml
-          command: ["sleep", "infinity"]
+         # command: ["sleep", "infinity"]
       volumes:
         - name: config
           configMap:
