--- a/argocd/apps/nepenthes/manifests/http-route.yaml
+++ b/argocd/apps/nepenthes/manifests/http-route.yaml
@@ -11,6 +11,7 @@ spec:
     sectionName: https
   hostnames:
   - nepenthes.yanello.net
+  - yanello.net
   rules:
   - backendRefs:
     - name: nepenthes
