--- a/argocd/apps/nepenthes/manifests/http-route.yaml
+++ b/argocd/apps/nepenthes/manifests/http-route.yaml
@@ -8,7 +8,7 @@ spec:
   parentRefs:
   - name: gateway-api
     namespace: istio-system
-    sectionName: https
+    sectionName: https-root
   hostnames:
   - nepenthes.yanello.net
   - yanello.net
