--- a/argocd/apps/nepenthes/manifests/http-route.yaml
+++ b/argocd/apps/nepenthes/manifests/http-route.yaml
@@ -12,6 +12,12 @@ spec:
   - name: gateway-api
     namespace: istio-system
     sectionName: http-root
+  - name: gateway-api
+    namespace: istio-system
+    sectionName: http
+  - name: gateway-api
+    namespace: istio-system
+    sectionName: https
   hostnames:
   - nepenthes.yanello.net
   - yanello.net
