--- a/argocd/apps/nepenthes/manifests/gw.yaml
+++ b/argocd/apps/nepenthes/manifests/gw.yaml
@@ -4,7 +4,7 @@ metadata:
   name: nepenthes-gateway
 spec:
   addresses:
-    - value: 10.10.8.1
+    - value: 10.10.8.30
       type: IPAddress
   gatewayClassName: istio
   listeners:
@@ -30,23 +30,23 @@ spec:
           from: All
         kinds:
           - kind: HTTPRoute
----
-apiVersion: gateway.networking.k8s.io/v1
-kind: HTTPRoute
-metadata:
-  name: http-redirect
-spec:
-  parentRefs:
-    - name: gateway-api
-      sectionName: http
-  hostnames:
-    - "yanello.net"
-  rules:
-    - filters:
-        - type: RequestRedirect
-          requestRedirect:
-            scheme: https
-            statusCode: 301
+# ---
+# apiVersion: gateway.networking.k8s.io/v1
+# kind: HTTPRoute
+# metadata:
+#   name: http-redirect
+# spec:
+#   parentRefs:
+#     - name: gateway-api
+#       sectionName: http
+#   hostnames:
+#     - "yanello.net"
+#   rules:
+#     - filters:
+#         - type: RequestRedirect
+#           requestRedirect:
+#             scheme: https
+#             statusCode: 301
 # apiVersion: gateway.networking.k8s.io/v1
 # kind: Gateway
 # metadata:
