--- a/argocd/apps/nepenthes/kustomization.yaml
+++ b/argocd/apps/nepenthes/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- manifests/deploy.yaml
+- manifests/sts.yaml
 - manifests/service.yaml
 - manifests/http-route.yaml
 - manifests/cm.yaml
