--- a/argocd/apps/nepenthes/manifests/sts.yaml
+++ b/argocd/apps/nepenthes/manifests/sts.yaml
@@ -37,7 +37,7 @@ spec:
               mountPath: /etc/nepenthes-config.yml
               subPath: nepenthes-config.yml
             - name: nepenthes-data
-              mountPath: /vol/nepenthes/db
+              mountPath: /vol/
       volumes:
         - name: config
           configMap:
