--- a/argocd/apps/nepenthes/manifests/cm.yaml
+++ b/argocd/apps/nepenthes/manifests/cm.yaml
@@ -12,10 +12,10 @@ data:
     forget_time: 86400
     forget_hits: 10
     
-    persist_stats: '/vol/nepenthes/data/statsfile.json'
+    persist_stats: '/vol/nepenthes/statsfile.json'
     seed_file: '/vol/nepenthes/seed.txt'
     
-    markov: '/vol/nepenthes/data/corpus.sqlite.db'
+    markov: '/vol/nepenthes/corpus.sqlite.db'
     markov_min: 20
     markov_max: 120
     
