--- a/argocd/apps/nepenthes/manifests/sts.yaml
+++ b/argocd/apps/nepenthes/manifests/sts.yaml
@@ -26,8 +26,7 @@ spec:
             - "-c"
             - |
               apk add --no-cache sqlite
-              mkdir -p /vol/nepenthes/db
-              if [ ! -f /vol/nepenthes/db/corpus.sqlite.db ]; then
+              if [ ! -f /vol/nepenthes/corpus.sqlite.db ]; then
                 echo 'PRAGMA journal_mode = wal;' | sqlite3 /vol/nepenthes/db/corpus.sqlite.db
               fi
           volumeMounts:
@@ -53,7 +52,7 @@ spec:
               subPath: nepenthes-config.yml
             - name: nepenthes-data
               mountPath: /vol/nepenthes
-          command: ["sleep", "infinity"]
+          #command: ["sleep", "infinity"]
       volumes:
         - name: config
           configMap:
