--- a/argocd/apps/nepenthes/manifests/sts.yaml
+++ b/argocd/apps/nepenthes/manifests/sts.yaml
@@ -27,7 +27,7 @@ spec:
             - |
               if [ ! -f /vol/nepenthes/corpus.sqlite.db ]; then 
                 apk add --no-cache sqlite
-                echo 'PRAGMA journal_mode = wal;' | sqlite3 /vol/nepenthes/db/corpus.sqlite.db
+                echo 'PRAGMA journal_mode = wal;' | sqlite3 /vol/nepenthes/corpus.sqlite.db
               fi
           volumeMounts:
             - name: nepenthes-data
