--- a/argocd/apps/nepenthes/manifests/sts.yaml
+++ b/argocd/apps/nepenthes/manifests/sts.yaml
@@ -53,7 +53,7 @@ spec:
               subPath: nepenthes-config.yml
             - name: nepenthes-data
               mountPath: /vol/nepenthes
-          command: ["sleep", "infinity"]
+          #command: ["sleep", "infinity"]
       volumes:
         - name: config
           configMap:
