--- a/argocd/apps/infra/monitoring/vm-k8s-stack/values.yaml
+++ b/argocd/apps/infra/monitoring/vm-k8s-stack/values.yaml
@@ -14,6 +14,10 @@ vmsingle:
   enabled: true
   spec:
     retentionPeriod: 10y
+    storage:
+      resources:
+        requests:
+          storage: 30Gi
     insertPorts:
       influxPort: "8086"
     extraEnvs:
