--- a/argocd/apps/backstage/manifests/secrets.yaml
+++ b/argocd/apps/backstage/manifests/secrets.yaml
@@ -8,6 +8,8 @@ stringData:
     K8S_API_URL: ENC[AES256_GCM,data:h6cgyQrFKMn+PbcJ/JY5/pu7MRiTPTBpBXAk,iv:BSotuD7Xwjh5cyxL0R3vDsnR5/a0CrfeMibtT+guWwM=,tag:LetwiQzOIPzL+hlur0rsbw==,type:str]
     POSTGRES_PASSWORD: ENC[AES256_GCM,data:JRumOhkLVz0x7S+CYLfVRlEIqHbpMwNfmcGaWd9E2LB8cq7JVHmznEU9SLvwBt2LeUT/bjYxs/Sl44LKQxXMxg==,iv:Qt6R7sz2leJttqP96/vRwHrqyCGe5O/sCYXVmphRRho=,tag:jVqhJmsir5+zz+R3uth3sQ==,type:str]
     GITHUB_TOKEN: ENC[AES256_GCM,data:Rm6+T0EX8rhHRE4vdvMvge9WpZ4NbnIqzqx/UWMEiI5MB/Yc70V7mg==,iv:RYg3Pzx9hsPwpwng5+sdDf3QrHifa8WnPXMFKU70a3E=,tag:osfIq7662nFAuhCtuu57MA==,type:str]
+    AUTHENTIK_CLIENT_ID: ENC[AES256_GCM,data:YEYAuwDBqPKFbntkaM5vB5355tHamgevehc2RFiNfUuQVg79AKTz+A==,iv:eENG/1InFNKQBJ64wGfbYjHn3CZQxHSMSZ5kzS2D558=,tag:vhmAuRLZ7AXDEkcvny6qnQ==,type:str]
+    AUTHENTIK_CLIENT_SECRET: ENC[AES256_GCM,data:50qTPo4K9Y689wq1RfzF7JSqoVLOIHHQr+pd2tjW9ClImEGkXvqVASeAXQobvQnhJwQagFo1Ik6KYYrYqBaUO2E8P/kBp+yRB77IFOxChS7JBWuxrargtCUMpOSH6OBQLWGGN4Pymx9DUHi4hgTrt5/Vcw0UsObf7eyMzE0micI=,iv:x7msh/ekLf1k0R/Bbby8AlTvGIiEs5QyHIcTtMdxEpk=,tag:GomPtS5pxcSvat/JtVmeWQ==,type:str]
 sops:
     age:
         - recipient: age1fd6r86ze2kzv9fey9y0jx47uekpkjsat76l2t6uesfhjpx7463cqtawww5
@@ -19,7 +21,7 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-04-23T00:13:24Z"
-    mac: ENC[AES256_GCM,data:t+XrMbfD+/oc6hTWIrfoJ+spfY/2x3zn9hlY+OEqxZIDjYmDNN9LXjNyexXfseVUEXF4ZKrjGYJIBGyodiTXJM5LZPJPkJR0gLTdLsfJ9qWr0hcOCYVZduhqiVCgDKEJGtVkBCybc2ATRzwwyX/KxpH6jet8O3Ozt3jU9W/Ap58=,iv:OsMFW15zITLXA3s8TBOH2ADIXXoVUf1//QYw93EV7sQ=,tag:fRvgAyHB8R5dOR+9+ZHqxQ==,type:str]
+    lastmodified: "2025-04-23T00:38:08Z"
+    mac: ENC[AES256_GCM,data:3QTh8U3QDEF8WXhsQeAc0DJrYNvXnjHNugFF224wxkBUeF1f3ATe7a9H/4wPGftFJvtmbaLfwWsyeEQtpMtrsh2XQ+XLRlC1v39gwEx92ly49aDcOkck2pk4gBMWteH9VEY+1NkdJLiOYvHCmY3/f0GRciPXWtYDJfbHC3GznXE=,iv:rjUhm/sMMbm35ojAGmwSRET16O+cmAjTj7hhHamlS0Q=,tag:l483z/sDBbT2COjKF5ZFIQ==,type:str]
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.10.1
