backstage session secret

--- a/argocd/apps/backstage/manifests/secrets.yaml
+++ b/argocd/apps/backstage/manifests/secrets.yaml
@@ -10,6 +10,7 @@ stringData:
     GITHUB_TOKEN: ENC[AES256_GCM,data:Rm6+T0EX8rhHRE4vdvMvge9WpZ4NbnIqzqx/UWMEiI5MB/Yc70V7mg==,iv:RYg3Pzx9hsPwpwng5+sdDf3QrHifa8WnPXMFKU70a3E=,tag:osfIq7662nFAuhCtuu57MA==,type:str]
     AUTHENTIK_CLIENT_ID: ENC[AES256_GCM,data:YEYAuwDBqPKFbntkaM5vB5355tHamgevehc2RFiNfUuQVg79AKTz+A==,iv:eENG/1InFNKQBJ64wGfbYjHn3CZQxHSMSZ5kzS2D558=,tag:vhmAuRLZ7AXDEkcvny6qnQ==,type:str]
     AUTHENTIK_CLIENT_SECRET: ENC[AES256_GCM,data:50qTPo4K9Y689wq1RfzF7JSqoVLOIHHQr+pd2tjW9ClImEGkXvqVASeAXQobvQnhJwQagFo1Ik6KYYrYqBaUO2E8P/kBp+yRB77IFOxChS7JBWuxrargtCUMpOSH6OBQLWGGN4Pymx9DUHi4hgTrt5/Vcw0UsObf7eyMzE0micI=,iv:x7msh/ekLf1k0R/Bbby8AlTvGIiEs5QyHIcTtMdxEpk=,tag:GomPtS5pxcSvat/JtVmeWQ==,type:str]
+    SESSION_SECRET: ENC[AES256_GCM,data:m54xB7lpcE7xj0Shq//lgxm3h2Owym0itOoxAP9aEmeMKyjk5eaaCty0JvFnDMwLnZpPtYFnb5dxAwWjuAqdIV1/eBsMRKwQA9R7KkFRG3r06aXJhDVJxdv+NtLFqCY2keqqUoj5F3YfhYX+23LmJYQFwjuja6aVEI+BFx1d7gw=,iv:IcJaBK71oJvF+/7IcKJ5rHNabHCG5+/ECBnfaDDc3AY=,tag:Ttmg/i4AyHOP7xZUzfygUQ==,type:str]
 sops:
     age:
         - recipient: age1fd6r86ze2kzv9fey9y0jx47uekpkjsat76l2t6uesfhjpx7463cqtawww5
@@ -21,7 +22,7 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-04-23T00:38:08Z"
-    mac: ENC[AES256_GCM,data:3QTh8U3QDEF8WXhsQeAc0DJrYNvXnjHNugFF224wxkBUeF1f3ATe7a9H/4wPGftFJvtmbaLfwWsyeEQtpMtrsh2XQ+XLRlC1v39gwEx92ly49aDcOkck2pk4gBMWteH9VEY+1NkdJLiOYvHCmY3/f0GRciPXWtYDJfbHC3GznXE=,iv:rjUhm/sMMbm35ojAGmwSRET16O+cmAjTj7hhHamlS0Q=,tag:l483z/sDBbT2COjKF5ZFIQ==,type:str]
+    lastmodified: "2025-04-23T00:44:14Z"
+    mac: ENC[AES256_GCM,data:fzJvxcKjgdJI8jxoXHZHmGBsQ/zmg4LPU8ZXk4J8NiLTtgGc2sV2wWUJyV3OZkI2Be1flPOXMRMxRC+t/4Kjkmv54yqLMOxrqetljEIpxdxuyBzJtv0JPBK4Cm+kQCkUQgm6SDUeyYXAdQ2VvMQrob/M2XC39+2eVt05Tut8PBM=,iv:9HizVqTUcLMGlQ6Lstn/7vBkBiSUFaNcOBaNOkkt7S0=,tag:Td8D8AB2PTs56Ke4+9DanA==,type:str]
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.10.1
