backstage git auth

--- a/argocd/apps/backstage/manifests/secrets.yaml
+++ b/argocd/apps/backstage/manifests/secrets.yaml
@@ -8,6 +8,8 @@ stringData:
     K8S_API_URL: ENC[AES256_GCM,data:h6cgyQrFKMn+PbcJ/JY5/pu7MRiTPTBpBXAk,iv:BSotuD7Xwjh5cyxL0R3vDsnR5/a0CrfeMibtT+guWwM=,tag:LetwiQzOIPzL+hlur0rsbw==,type:str]
     POSTGRES_PASSWORD: ENC[AES256_GCM,data:JRumOhkLVz0x7S+CYLfVRlEIqHbpMwNfmcGaWd9E2LB8cq7JVHmznEU9SLvwBt2LeUT/bjYxs/Sl44LKQxXMxg==,iv:Qt6R7sz2leJttqP96/vRwHrqyCGe5O/sCYXVmphRRho=,tag:jVqhJmsir5+zz+R3uth3sQ==,type:str]
     GITHUB_TOKEN: ENC[AES256_GCM,data:Rm6+T0EX8rhHRE4vdvMvge9WpZ4NbnIqzqx/UWMEiI5MB/Yc70V7mg==,iv:RYg3Pzx9hsPwpwng5+sdDf3QrHifa8WnPXMFKU70a3E=,tag:osfIq7662nFAuhCtuu57MA==,type:str]
+    AUTH_GITHUB_CLIENT_ID: ENC[AES256_GCM,data:fsm7xfhpvkbJLIWEbZTA93Oe8p8=,iv:7WkneRpE/gu9JE9tlOmZ/787QbDAeFiHwiqo9moEi34=,tag:D6D6EnJBfN4k6aocGz9YZw==,type:str]
+    AUTH_GITHUB_CLIENT_SECRET: ENC[AES256_GCM,data:F7wLuYWFsPIdC9k7wo8UgoffTp2YWRV+YZCZgZHGUBRITHx2Abb4gA==,iv:AWaqEulxfnUXuKqa1Aqdh9Z0ECRAoDeP3Bu8UCo0s6Y=,tag:m32pLuGsMrRPAAIhJWgjYQ==,type:str]
     AUTHENTIK_CLIENT_ID: ENC[AES256_GCM,data:YEYAuwDBqPKFbntkaM5vB5355tHamgevehc2RFiNfUuQVg79AKTz+A==,iv:eENG/1InFNKQBJ64wGfbYjHn3CZQxHSMSZ5kzS2D558=,tag:vhmAuRLZ7AXDEkcvny6qnQ==,type:str]
     AUTHENTIK_CLIENT_SECRET: ENC[AES256_GCM,data:50qTPo4K9Y689wq1RfzF7JSqoVLOIHHQr+pd2tjW9ClImEGkXvqVASeAXQobvQnhJwQagFo1Ik6KYYrYqBaUO2E8P/kBp+yRB77IFOxChS7JBWuxrargtCUMpOSH6OBQLWGGN4Pymx9DUHi4hgTrt5/Vcw0UsObf7eyMzE0micI=,iv:x7msh/ekLf1k0R/Bbby8AlTvGIiEs5QyHIcTtMdxEpk=,tag:GomPtS5pxcSvat/JtVmeWQ==,type:str]
     SESSION_SECRET: ENC[AES256_GCM,data:m54xB7lpcE7xj0Shq//lgxm3h2Owym0itOoxAP9aEmeMKyjk5eaaCty0JvFnDMwLnZpPtYFnb5dxAwWjuAqdIV1/eBsMRKwQA9R7KkFRG3r06aXJhDVJxdv+NtLFqCY2keqqUoj5F3YfhYX+23LmJYQFwjuja6aVEI+BFx1d7gw=,iv:IcJaBK71oJvF+/7IcKJ5rHNabHCG5+/ECBnfaDDc3AY=,tag:Ttmg/i4AyHOP7xZUzfygUQ==,type:str]
@@ -22,7 +24,7 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-04-23T00:44:14Z"
-    mac: ENC[AES256_GCM,data:fzJvxcKjgdJI8jxoXHZHmGBsQ/zmg4LPU8ZXk4J8NiLTtgGc2sV2wWUJyV3OZkI2Be1flPOXMRMxRC+t/4Kjkmv54yqLMOxrqetljEIpxdxuyBzJtv0JPBK4Cm+kQCkUQgm6SDUeyYXAdQ2VvMQrob/M2XC39+2eVt05Tut8PBM=,iv:9HizVqTUcLMGlQ6Lstn/7vBkBiSUFaNcOBaNOkkt7S0=,tag:Td8D8AB2PTs56Ke4+9DanA==,type:str]
+    lastmodified: "2025-04-23T01:57:48Z"
+    mac: ENC[AES256_GCM,data:pgvwm6hOt3Bke76QGFNkejhlK430u3w5mcpL4Oq3qjiz6nMqxp5IVcAgjpnArmu/8Zsx9utI0pz9s3vyz6Dz0NUbPFV9BKWrl311S0TSWmweQDbJbHxUal4AX0ZezsGOv/AUUF1DdUxzQ1h5s1aQ3RlAxeJmga3wKNvBx2e11c0=,iv:WRY/uuuRSnov74QXZtLGaGqYFl40pjXphLORwM0LxXE=,tag:0xo/+9wFDiowHE3nydii7A==,type:str]
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.10.1
