--- a/argocd/apps/argocd/manifests/secrets.yaml
+++ b/argocd/apps/argocd/manifests/secrets.yaml
@@ -8,11 +8,8 @@ type: Opaque
 stringData:
     webhook.github.secret: ENC[AES256_GCM,data:gXNTNJHj5rKxmKwJJBmdJ24nvBAtjsY/SJyIws/VuBDzUYGR6Frmew==,iv:zLKMGfax3ZLLrkrDsB6YswhbSNiYUZ1PIOyIVuY9EQM=,tag:RNzpoXtGihe6MCI6Mq1SXQ==,type:str]
     dex.authentik.clientSecret: ENC[AES256_GCM,data:4y+tHs4hUz1j6Oaleu9IobN5Ahf0oDkXBpBNK5NwN+JJt1OY32wcacg0zNZcb9pJzSrW82skJY3Lz+d2ua5BmkrHvPZutZjZuykcR0WaCV0ijEi1W+kvxAzyZ3hXl0M9xO9Oj3OsGk2o46vpiwtZuuhgI392k8dK4ZLT+iF3yug=,iv:PRSvmL1L6Wbilh9jv6HyTYwmikPb/GO7vBYtwVGlzhg=,tag:mYoigWn15sYSrqaEEnPUhg==,type:str]
+    dex.authentik.clientID: ENC[AES256_GCM,data:n3Hdm7j6JwhEo/egXy17RO/aOdENnupQrDlmk0Pt8Ddu9IIf+kD1HA==,iv:JkaEBpDZeHfsTAqUWmhjw+7UHgN9byJVjyXqD+ooZRE=,tag:V6gUT1PqYzbpXFQbZqRAmg==,type:str]
 sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
     age:
         - recipient: age1fd6r86ze2kzv9fey9y0jx47uekpkjsat76l2t6uesfhjpx7463cqtawww5
           enc: |
@@ -23,8 +20,7 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-17T00:56:28Z"
-    mac: ENC[AES256_GCM,data:ntccYs+3WIPArJABaIlbps6HqOJqxZ0+kYTpZcbk5INyneKziVutJASx+KzLm9Jmlwp3rFmJo53I04XoTcfNPwotmnpEUHFQMXPClhuxQgLj6IE9ariPCvgVCZXglftBKeVKHlevV7ngFStYG1qJdiKSnhIItdHItCyTxE/Kd68=,iv:CCC28eNYHoPz6RWb3HHEhx9DBk4SUtpbl7TOJCqD20A=,tag:7ZncOswF9pC6qXwBh7xO9A==,type:str]
-    pgp: []
+    lastmodified: "2025-04-23T02:53:32Z"
+    mac: ENC[AES256_GCM,data:I6K40u2mwCBcZjWoT83HnK8cH6sdiwggXZ4d9O/8//OMhA1JcRBLWscRFT5h7msUvS9veFsfNZ6+Mr1iGP0rbFZhkOm40Ly1gcYa+U78C8p/J+VTqa7XSfzU3EO2i4ai6StNyqyqc2y06h8Tjz0ifcXeN0vitrw0zzr/Xf8Qvd8=,iv:qDWrvPkBtmXkrEMotlAGcgt9cHGUzjlp5lXzyq2s1h8=,tag:NjDvAY2R/IygsOYSHkfGqg==,type:str]
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
-    version: 3.9.4
+    version: 3.10.1
