--- a/argocd/apps/nepenthes/manifests/cm.yaml
+++ b/argocd/apps/nepenthes/manifests/cm.yaml
@@ -16,8 +16,10 @@ data:
     seed_file: '/vol/nepenthes/seed.txt'
     
     markov: '/vol/nepenthes/corpus.sqlite.db'
-    markov_min: 20
-    markov_max: 120
+    markov_min: 60
+    markov_max: 240
     
     min_wait: 4
     max_wait: 25
+
+    real_ip_header: X-Forwarded-For
