renovate ignore all dev folders

--- a/argocd/apps/infra/renovate/values.yaml
+++ b/argocd/apps/infra/renovate/values.yaml
@@ -47,7 +47,7 @@ renovate:
         "fileMatch": ["^build.gradle$"],
       },
       "ignorePaths": [
-        "argocd/apps/dev/**"
+        "**/dev/**"
       ],
       "packageRules": [
         {
