--- a/argocd/apps/infra/monitoring/vm-k8s-stack/kustomization.yaml
+++ b/argocd/apps/infra/monitoring/vm-k8s-stack/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - ./manifests/vmscrape/homeassistant.yaml
   - ./manifests/vmscrape/haproxy.yaml
   - ./manifests/vmscrape/netdata.yaml
+  - ./manifests/vmscrape/kuma.yaml
  # - ./manifests/vmscrape/istio.yaml
  # - ./manifests/vmsingle/influx.yaml
 generators:
