--- a/argocd/apps/infra/monitoring/vm-k8s-stack/manifests/secrets/secret-generator.yaml
+++ b/argocd/apps/infra/monitoring/vm-k8s-stack/manifests/secrets/secret-generator.yaml
@@ -9,3 +9,4 @@ metadata:
 files:
   - ./manifests/secrets/secrets.yaml
   - ./manifests/secrets/homeassistant.yaml
+  - ./manifests/secrets/kuma.yaml
