--- a/argocd/apps/media-server/unpackerr/manifests/pvc.yaml
+++ b/argocd/apps/media-server/unpackerr/manifests/pvc.yaml
@@ -21,16 +21,16 @@ spec:
   resources:
     requests:
       storage: 100Mi
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: media
-spec:
-  storageClassName: nfs-storage
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 1Gi
-  volumeName: media-pv
+# ---
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: media
+# spec:
+#   storageClassName: nfs-storage
+#   accessModes:
+#     - ReadWriteOnce
+#   resources:
+#     requests:
+#       storage: 1Gi
+#   volumeName: media-pv
