atuin self hosted2

--- a/argocd/apps/atuin/manifests/sts.yaml
+++ b/argocd/apps/atuin/manifests/sts.yaml
@@ -81,7 +81,10 @@ spec:
         app: atuin
     spec:
       containers:
-        - envFrom:
+        - args:
+            - server
+            - start
+          envFrom:
             - secretRef:
                 name: atuin-secrets
           env:
