--- a/argocd/apps/media-server/wrapperr/kustomization.yaml
+++ b/argocd/apps/media-server/wrapperr/kustomization.yaml
@@ -2,10 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- manifests/deploy.yaml
-- manifests/pvc.yaml
-- manifests/cm.yaml
-- manifests/ns.yaml
+  - manifests/sts.yaml
+  - manifests/svc.yaml
+  - manifests/hpp-route.yaml
 
 generators:
-  -  manifests/secret-generator.yaml
+  - manifests/secret-generator.yaml
