--- a/argocd/apps/media-server/wrapperr/kustomization.yaml
+++ b/argocd/apps/media-server/wrapperr/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   - manifests/sts.yaml
   - manifests/svc.yaml
-  - manifests/hpp-route.yaml
+  - manifests/http-route.yaml
 
 generators:
   - manifests/secret-generator.yaml
